[package]
name = "zkrypto-homepage-b2b-v6-dynamic"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
